Update .gitignore with comprehensive .NET patterns and remove package.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,22 @@
 ## .NET Core
-bin/
-obj/
-*.user
-*.userosscache
-*.suo
-*.userprefs
-.vs/
-.vscode/
 *.swp
 *.*~
 project.lock.json
 .DS_Store
 *.pyc
+nupkg/
+
+# Visual Studio Code
+.vscode
+
+# Rider
+.idea
+
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
 
 # Build results
 [Dd]ebug/
@@ -29,42 +34,84 @@ msbuild.log
 msbuild.err
 msbuild.wrn
 
-# Visual Studio files
+# Visual Studio
 .vs/
-.vscode/
-*.sln.docstates
-*.suo
-*.user
-*.userosscache
-*.sln.ide/
-*.ide/
+
+# Visual Studio profiler
+*.psess
+*.vsp
+*.vspx
+*.sap
+
+# ReSharper
+_ReSharper*/
+*.[Rr]e[Ss]harper
+*.DotSettings.user
+
+# NuGet Packages
+*.nupkg
+# NuGet Symbol Packages
+*.snupkg
+# The packages folder can be ignored because of Package Restore
+**/[Pp]ackages/*
+# except build/, which is used as an MSBuild target.
+!**/[Pp]ackages/build/
+# Uncomment if necessary however generally it will be regenerated when needed
+#!**/[Pp]ackages/repositories.config
+# NuGet v3's project.json files produces more ignorable files
+*.nuget.props
+*.nuget.targets
+
+# Microsoft Azure Build Output
+csx/
+*.build.csdef
+
+# Microsoft Azure Emulator
+ecf/
+rcf/
+
+# Windows Store app package directories and files
+AppPackages/
+BundleArtifacts/
+Package.StoreAssociation.xml
+_pkginfo.txt
+*.appx
+*.appxbundle
+*.appxupload
+
+# Visual Studio cache files
+# files ending in .cache can be ignored
+*.[Cc]ache
+# but keep track of directories ending in .cache
+!?*.[Cc]ache/
+
+# Others
+ClientBin/
+~$*
+*~
 *.dbmdl
 *.dbproj.schemaview
+*.jfm
 *.pfx
 *.publishsettings
+orleans.codegen.cs
 
-# Rider
-.idea/
+# SQL Server files
+*.mdf
+*.ldf
+*.ndf
 
-# User-specific files
-*.rsuser
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
+# Business Intelligence projects
+*.rdl.data
+*.bim.layout
+*.bim_*.settings
+*.rptproj.rsuser
+*- [Bb]ackup.rdl
+*- [Bb]ackup ([0-9]).rdl
+*- [Bb]ackup ([0-9][0-9]).rdl
 
-# Logs
-logs/
-*.log
-npm-debug.log*
+# Microsoft Fakes
+FakesAssemblies/
 
-# Dependencies
-packages/
-node_modules/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Local History for Visual Studio
+.localhistory/
