Add SwaggerAnalyzer service and fix compilation issues
- Added SwaggerAnalyzerService for OpenAPI document analysis
- Added SwaggerAnalyzerController for API endpoints
- Fixed compilation errors and improved null handling
- Added Microsoft.OpenApi packages
- Added sample Swagger files for testing

--- a/ApiGateway.csproj
+++ b/ApiGateway.csproj
@@ -9,9 +9,18 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.3.2" />
+    <PackageReference Include="Microsoft.OpenApi" Version="1.6.22" />
+    <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.6.22" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="samples\**" />
+    <Content Remove="samples\**" />
+    <EmbeddedResource Remove="samples\**" />
+    <None Remove="samples\**" />
   </ItemGroup>
 
 </Project>
