--- a/appsettings.json
+++ b/appsettings.json
@@ -45,6 +45,40 @@
         },
         "CacheEnabled": false
       }
-    ]
+    ],
+    "SwaggerConfigurations": {
+      "BaseApi": {
+        "SwaggerPath": "./swagger/api-a.json",
+        "Description": "Base API Configuration"
+      },
+      "PartnerApis": [
+        {
+          "Name": "PartnerB1",
+          "SwaggerPath": "./swagger/api-b1.json",
+          "Mappings": [
+            {
+              "SourceEndpoint": "/api/v1/resource",
+              "TargetEndpoint": "/api/partner1/resource",
+              "HttpMethod": "GET",
+              "TargetHttpMethod": "GET",
+              "SourceFormat": "Json",
+              "TargetFormat": "Json",
+              "TransformationRules": {
+                "RequestTransform": "transform-request-b1.json",
+                "ResponseTransform": "transform-response-b1.json"
+              }
+            }
+          ]
+        }
+      ]
+    },
+    "RateLimiting": {
+      "EnableRateLimit": true,
+      "RequestsPerMinute": 100
+    },
+    "Caching": {
+      "EnableCaching": true,
+      "CacheDurationMinutes": 5
+    }
   }
 }
