Add the ability to add and switch checker and remediation using external tools
Related to #1

Add the ability to integrate and switch between internal and external tools for assessment and remediation.

* **Configuration**:
  - Add configuration options for external tool integration in `appsettings.json`.
  - Include settings for `ExternalTool` with `Enabled`, `ApiKey`, and `Endpoint`.

* **Program.cs**:
  - Register external tool service if `ExternalTool.Enabled` is true.
  - Add logic to switch between internal and external tools based on configuration.

* **ApiMappingService.cs**:
  - Update `TransformRequest` method to support external tool integration.
  - Add logic to call external tool API if `ExternalTool.Enabled` is true.

* **SwaggerAnalyzerService.cs**:
  - Update `AnalyzeAndGenerateMapping` method to support external tool integration.
  - Add logic to call external tool API if `ExternalTool.Enabled` is true.

* **Documentation**:
  - Update `docs/FunctionalSpecification.md` to include details on external tool integration.
  - Add section explaining configuration options and usage of external tools.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/pascalpaccaudssgai/api-gateway-middleware/issues/1?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/appsettings.json
+++ b/appsettings.json
@@ -79,6 +79,11 @@
     "Caching": {
       "EnableCaching": true,
       "CacheDurationMinutes": 5
+    },
+    "ExternalTool": {
+      "Enabled": true,
+      "ApiKey": "your-api-key",
+      "Endpoint": "https://external-tool.example.com/api"
     }
   }
 }
